--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#C026D3",
   "icons": [
     {
-      "src": "https://www.notion.so/image/placeholder.png", 
+      "src": "https://github.com/suchetamp/second-brain-pwa/blob/main/public/SB%20Icon.png", 
       "sizes": "512x512",
       "type": "image/png"
     }
