--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,23 +7,16 @@
   "theme_color": "#C026D3",
   "icons": [
     {
-      "src": "/SBIcon512.png",
+      "src": "/SBIcon512.png", 
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "share_target": {
-    "action": "/share-target",  // This is a placeholder route name
+    "action": "/share-target",
     "method": "POST",
     "params": {
-      "title": "title",         // The name of the shared data field for the Title
-      "text": "content",        // The name of the shared data field for the Body
-      "files": [
-        {
-          "name": "link",
-          "accept": ["text/plain", "text/html", "image/*", "application/pdf"]
-        }
-      ]
+      "text": "content"
     }
   }
 }
