--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,11 +12,16 @@
       "type": "image/png"
     }
   ],
-  "share_target": {
+ "share_target": {
     "action": "/share-target",
     "method": "POST",
     "params": {
-      "text": "content"
+      "text": "content",   // This still captures the text content (which might be the URL)
+      "files": [
+        {
+          "name": "link",
+          "accept": ["text/plain", "text/html", "image/*"] // Explicitly accept Text/HTML (URLs)
+        }
+      ]
     }
   }
-}
