--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
+
 {
   "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/submit.js"
-    },
-    {
-      "source": "/share-target",
-      "destination": "/api/submit.js"
-    }
+    { "source": "/api/(.*)", "destination": "/api/submit.js" },
+    { "source": "/share-target", "destination": "/api/submit.js" }
   ]
 }
