--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "express": "^4.18.2",
-    "@notionhq/client": "^2.2.3"
+    "@notionhq/client": "^2.2.3",
+    "formidable": "^3.5.0"  
   }
 }
