--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,6 +16,7 @@
   "share_target": {
     "action": "/share-target",
     "method": "POST",
+    "enctype": "multipart/form-data",
     "params": {
       "text": "content",
       "files": [
